      exponent of a power-law ("slope") and its exponential truncation (from 
      "expo" and "rate", which was more ambiguous)
  
  * EXPERIMENTAL: Variogram-based indicators has been added. Note that this 
      deserves more testing and application to real-world data to make sure that
      the computation of variograms are accurate enough. 
  
Bug fixes: 

  * Fix a bug where available methods were not displayed in `summary()`
  
  * Fix a bug where the r-spectrum was wrongly-calculated when the matrix had 
      an odd number of rows or columns
  
Misc changes: 
  
  * NAs in provided matrices now produce warnings instead of errors
  
  * Dependency to tidyr has been removed (this fixes occasional NOTEs on CRAN
     automated checking)
  
Removals: 

  * All deprecated functions in spatialwarnings v2.0.0 are now defunct
  
spatialwarnings v2.0.0 (Release date: 2020-05-14)
=================================================

Improvements: 
  
  * New methods are available to produce null matrices, on top of shuffling the
      original matrix (e.g. based on smoothing the original matrix). 
  
  * Significance of Power-law range can now be tested using `indictest()`. 
      Using `plot_distr()` on the resulting objects will display the 0.05/0.95 
      quantiles of the null patch size distributions. 
  
  * The package gains a generic function `display_matrix`, to eyeball the  
      matrices being used in `spatialwarnings` objects using ggplot2
  
  * Improved the fitting of distributions, which should be more robust now. 
  
  * Speed improvements in label()
  
Bug fixes: 
  
  * Fixed a bug where the normalization constant for truncated power-laws was 
      miscalculated
  
Removals: 
  
  * All the deprecated `*_spews` functions are now defunct (removed). 
  
  * Most `indicator_*` functions are now deprecated. 
  
Misc changes: 
  
  * Lots of duplicated code has been removed
  
  * Minor changes in print/summary methods
  