@@ -37,7 +37,12 @@ The deviations of Flowlength from its expected values under random or
   aggregated-pattern null models can be used as an indicator of imminent 
   transition to a degraded state (Rodriguez et al. 2017) in the context 
   of arid drylands. An increased deviation of flowlength compared to its 
-  null values is expected as a possible transition gets closer. 
+  null values is expected as a possible transition gets closer. This deviation
+  can be computed using any null model provided by \code{spatialwarnings} (see 
+  \code{\link{indictest}} for more details), but a specific null model is 
+  provided for Flowlength based on a much-faster analytical approximation, 
+  using the argument \code{null_method = "approx_rand"} when calling 
+  \code{indictest} (see examples below). 
 
 In general, Flowlength can be used as indicator of dryland functional status 
   by assessing potential water and soil losses in patchy landscapes 
@@ -57,6 +62,12 @@ fl_result <- flowlength_sews(arizona, slope = 20, cell_size = 1)
 #   Rodriguez et al. (2017) as an indicator of degradation. 
 fl_test <- indictest(fl_result, nulln = 19)
 plot(fl_test, what = "z_score")
+
+# Use the analytical approximation suggested in Rodriguez et al. (2017), 
+# instead of permuting the original values in the matrix (much faster)
+fl_test <- indictest(fl_result, null_method = "approx_rand")
+plot(fl_test, what = "z_score")
+
 }
 
 }
