@@ -1,0 +1,13 @@
+im E_FL_r V_FL
+images/AZ-P6.csv 0.020088124156696248595599 0.000007501044834010834033
+images/AZ-P5.csv 0.028736810861636936931252 0.000011482196118187495450
+images/AZ-P4.csv 0.062327771594131400889616 0.000033492724483073343239
+images/AZ-P3.csv 0.116000701323613453208594 0.000091049314578739090620
+images/AZ-P2.csv 0.139302925243792508069873 0.000124288820574264963215
+images/AZ-P1.csv 0.204361244724164198283134 0.000285770327872775231626
+images/AU-P6.csv 0.033274959531469867901610 0.000013884526574978964947
+images/AU-P5.csv 0.051253105011076660613156 0.000025721738569205610664
+images/AU-P4.csv 0.028964907754126766048497 0.000011529869595447439501
+images/AU-P3.csv 0.047338424299124215455237 0.000023058335555563216207
+images/AU-P2.csv 0.131869168043653395283599 0.000131906737194265044621
+images/AU-P1.csv 0.164993199728464046138754 0.000195848466177414581857
